--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://carlchua.github.io",
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "phaser": "^3.90.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
