--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "reshake": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
